Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65758

setting QMovie::speed to 0 causes a crash

XMLWordPrintable

    • a966991b3af18d57182e5dc5a3ed4985d114b56d

      Now we've added a speed property to AnimatedImage in QtQuick so it became a bit more apparent.

      https://codereview.qt-project.org/#/c/201135/

        For Gerrit Dashboard: QTBUG-65758
        # Subject Branch Project Status CR V

            valentyn.doroshchuk Valentyn Doroshchuk
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes